🔧 Refactor product and shopping list models for consistency; update method names and types for clarity (into english)