@@ -1,22 +1,21 @@
 package de.fab001.grocee.domain.service;
 
-import de.fab001.grocee.domain.model.Produkt;
+import de.fab001.grocee.domain.model.Product;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 public class ExpirationChecker {
 
-    public List<Produkt> findeAbgelaufene(List<Produkt> produkte) {
-        return produkte.stream()
-                .filter(p -> p.getHaltbarkeit().istAbgelaufen())
-                .collect(Collectors.toList());
+    public List<Product> findExpired(List<Product> products) {
+        return products.stream()
+                .filter(p -> p.gExpirationDate().isExpired())
+                .toList();
     }
 
-    public List<Produkt> findeKurzVorAblauf(List<Produkt> produkte) {
-        return produkte.stream()
-                .filter(p -> p.getHaltbarkeit().istKurzVorAblauf())
-                .collect(Collectors.toList());
+    public List<Product> findCloseToExpire(List<Product> products) {
+        return products.stream()
+                .filter(p -> p.gExpirationDate().isCloseToExpire())
+                .toList();
     }
 }
